public/css/videoChatPlayer.css
body {
	overflow: hidden;	
	background-color:#0e0e10;
    color: white;

    font-family: "Inter", "Helvetica Neue", Helvetica, Arial, sans-serif;

    height: 100vh;
    width: 100%;

    display: flex;
    flex-direction: row;
}

video {
	width:calc(100% - 341px);
	height: 100%;
	position: absolute;
    top: 0;
    left: 0;
}


.video-container:hover .custom-controls {
	opacity: 100%;
	animation: fadeInAnimationBar ease 0.3s;
}
.video-container .custom-controls {
	animation: fadeOutAnimationBar ease 0.3s;
}

  
@keyframes fadeInAnimationBar {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
     }
}
@keyframes fadeOutAnimationBar {
    100% {
        opacity: 0;
    }
    0% {
        opacity: 1;
     }
}

/* Custom Video Controls bar */
.custom-controls {
	position: absolute;
	width:calc(100% - 341px);
	height: 65px;
	background-color: green;
	background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.5));
	bottom: 0;
	left: 0;
    z-index: 999;
}
.progress-bar-container{	
	top: 0;
	left: 0;
	width: 100%;
	height: 20px;
	cursor: pointer;
	background-color: blue;
	display: flex;
}
.progress-bar {
	margin:auto;
	width: calc(100% - 40px);
	height: 6px;
	background-color: rgba(98, 98, 98, 0.8);
	border-radius: 10px;
}
.progress-bar-container .progress-bar {
	transition: height 0.1s ease;
}
.progress-bar-container:hover .progress-bar {
	margin: auto;
	height: 8px;
	padding: 0;
	background-color: #626262;
	border-radius: 4px;
	opacity: 100%;
	transition: height 0.1s ease;
}

.progress-bar-container:hover .barSelector {
	float: right;
	height: 18px;
	width: 18px;
	background-color: #ff0000;
	border: 1px solid rgba(255, 255, 255, 0.8);
	border-radius: 50%;
	margin-top: -6px;
	margin-right: -10px;
	-webkit-transform: scale(1);
	-ms-transform: scale(1);
	transform: scale(1);
}
.progress-bar-container: .barSelector {
	transition: fadeInAnimationBar 0.1s ease;
}

.progress-bar-container:hover .bar {
	background-color: rgba(255, 0, 0, 1);
}

.barSelector {
	height: 100%;
	width: 2px;
	background-color: white;
	float: right;
	transition:all 0.05s linear;
}
.progress-bar-container:hover .barSelector-Small {
	display: none;
}

.bar {
    margin-right: auto;
	width: calc(0% + 1px);
	height: 100%;
	background-color: rgba(255, 0, 0, 0.8);
	left: 0;
	border-top-left-radius: 10px;
	border-bottom-left-radius: 10px;
}

.buttons-container{
	bottom: 0;
	left: 0;
	position: absolute;
	height: 45px;
	width: 100%;
	background-color: orange;
}

.custom-controls .button {
	display:inline-block;

    background: transparent;
    cursor: pointer;    
    transition: 100ms all ease;
}
.custom-controls .button:hover {
	background-color: rgba(255, 255, 255, 0.2);
	border-radius: 5px;
}
.custom-controls .button:selected {
}


/* Example using css transitions for button icons:
*    https://codepen.io/zhangzhuo/pen/LNGLOz
*/
.custom-controls #playpause, .custom-controls #stop {
	margin: 8px 0 8px 15px;
    width: 17px;
    height: 17px;
    cursor: pointer;
	padding: 6px;
}
.play-button {
	margin: 0px;
    position: absolute;
    width: 17px;
    height: 17px;
    background: #fff;
    transition: clip-path .3s ease;
}
.play-button-before {
    clip-path: polygon(0 0, 50% 25%, 50% 75%, 0% 100%);
    background: #e5e5e5;
}
.play-button-after {
    clip-path: polygon(50% 25%, 100% 50%, 100% 50%, 50% 75%);
    background: #e5e5e5;
}
#playpause.play:hover .play-button-before {
    background: #ffffff;
	opacity: 100%;
}
#playpause.play:hover .play-button-after {
    background: #ffffff;
	opacity: 100%;
}
#playpause.pause .play-button-before {
    clip-path: polygon(0 0, 30% 0, 30% 100%, 0% 100%);
    background: #ffffff;
	opacity: 90%;
}
#playpause.pause .play-button-after{
    clip-path: polygon(70% 0, 100% 0, 100% 100%, 70% 100%);
    background: #ffffff;
	opacity: 90%;
}

.time-container{
	position: absolute;
	left: 150px;
	margin: 10px 0 10px 0px;
	display: inline-block;
	width: 100px;
	height: 25px;
	top: 0;
	width: 200px;
}

#volume{
	position: absolute;
	left: 55px;
	margin: 8px 0 8px 0px;
	display: inline-block;
	width: 29px;
	height: 29px;
	color: white;
	fill: #fff;
	opacity: 90%;
}
#volume svg {	
	width: 29px;
	height: 29px;
    margin-top: -4px;
    margin-left: -3px;
}

.buttons-container svg#volume.button path{
	margin: 20px 1px 1px 1px;
}



/* Custom Video Controls bar Ends */


#topBox {
	width: 340px;
	height:69px;
	border-left: 1px solid #303032;
	position:absolute;
	top: 0;
	right: 0;
    bottom: 0;
	background-color: #1f1f23;
}

#topBox > div {
    height: 20px;
	padding-top: 2px;
	margin: auto;
}

#topBox .topBoxTitle {
    width: 55px;
	margin: auto;
}

#message {
	margin-top: auto;
	margin-bottom: auto;
	margin-left: 5px;
	font-size: 14px;
	background-color: green;
}

#message.animate {
    animation: fadeOutInfo ease 0.3s;
    transition-delay:5s;
    
}
@keyframes fadeOutInfo {
    100% {
        opacity: 0.4;
    }
    0% {
        opacity: 1;
     }
}

#controls {
    display: inline-block;
}


#chat {
	position: absolute;
	bottom: 0;
	right: 0;
    width: 340px;
    border-left: 1px solid #303032;
	border-top: 1px solid #303032;
    height: calc(100% - 70px);
	overflow-y: auto;
	background-color:#18181b;
 	font-family: "Inter";
	color: rgb(222, 222, 227);
	font-size: 13px;
	font-weight: 400;
	line-height: 20px;
	overflow-x: hidden;
	scrollbar-width: thin;
	/* scrollbar-width: none; */
}


/* width */
#chat::-webkit-scrollbar {
  width: 8px;
}

/* Track */
#chat::-webkit-scrollbar-track {
  background: #18181b; 
}
 
/* Handle */
#chat::-webkit-scrollbar-thumb {
  background: #727274;
}

/* Handle on hover */
#chat::-webkit-scrollbar-thumb:hover {
  background: #5f5f61; 
}


.cover-bar {
	position: absolute;
	bottom: 0;
	right: 0;
    width: 8px;
	height: calc(100% - 70px);
	background-color:#18181b;
	z-index: 999;
	opacity: 100%;
	visibility: visible;
	animation-fill-mode: forwards;
	animation: CoverFadeIn linear 0.1s;
}
.scroll-bar-wrap:hover .cover-bar {	
	animation-fill-mode: forwards;
	animation: CoverFadeOut linear 0.1s;
	visibility: hidden;
	
}

@keyframes CoverFadeIn {
    0% {
        opacity: 0.4;
    }
    100% {
        opacity: 1;
     }
}
@keyframes CoverFadeOut { 
    0% { 
        opacity: 100%;
		visibility: visible;
    }
    99% {
        opacity: 1%;
     }
	100% {
		visibility: hidden;
	 }
}


input {
    width: 275px;
	background-color:#2b2b2f;
	font-size: 12px;
	font-weight: 400;
}


.info {
	font-family: "Inter";
}

.error {
    background-color: red;
    color: white;
}

.flex {
    display: flex;
}

.center {
    text-align: center;
}

.chatline {
    display: flex;
    white-space: nowrap;
}

.chattime {
    margin: 0 10px 0 7px;
    vertical-align: top;

    font-size: 12px;
    font-weight: 400;
}

.chatbody {
    white-space: normal;
	word-break: break-word;
}

.commenter {
    font-weight: bolder;
}

.messagePrefix {
    margin-right: 3px;
}

.chat-image-scale-1 {
    size: 100%;
}

.chat-image-scale-2 {
    size: 100%;
}

.chat-image-scale-3 {
    size: 100%;
}

.video-time {
	display: inline-block;
    margin: auto 0px;
    padding: 2px 2px;
	text-align: center;
}
#timeSeperator {
}


/* Play Button */

.video-controls-container .controls button {
  background: none;
  border: none;
  color: inherit;
  padding: 0;
  height: 30px;
  width: 30px;
  font-size: 1.1rem;
  cursor: pointer;
  opacity: .85;
  transition: opacity 150ms ease-in-out;
}

.video-controls-container .controls button:hover {
  opacity: 1;
}

.video-container.paused .pause-icon {
  display: none;
}

.video-container:not(.paused) .play-icon {
  display: none;
}

